# rl-arena-env

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: new_environment.md
.github/workflows/: publish.yml  test.yml  validate-env.yml
docs/: ENVIRONMENT_CREATION_TUTORIAL.md  LIBRARY_API.md  VISUALIZATION.md  api_reference.md  contributing.md  environment_guide.md  quickstart.md
examples/: play_interactive.py  random_agent.py  record_match.py  replay_to_html.py  run_local_match.py  simple_workflow.py  submission_template.py  train_dqn_pong.py  visualize_game.py
recordings/: README.md
rl_arena/: __init__.py  interactive.py  make.py  submission.py  training.py  version.py
rl_arena/agents/: __init__.py  random_agent.py  rule_based_agent.py
rl_arena/core/: __init__.py  agent.py  environment.py  exceptions.py  recorder.py  renderer.py  types.py
rl_arena/envs/: __init__.py  registry.py
rl_arena/envs/pong/: README.md  __init__.py  config.yaml  environment.py  renderer.py
rl_arena/tools/: __init__.py  validator.py
rl_arena/utils/: __init__.py  html_template.py  logger.py  replay.py  validator.py
scripts/: create_environment.py
templates/environment/: README.md.template  __init__.py.template  environment.py.template  renderer.py.template  test_environment.py.template
tests/: __init__.py  conftest.py  test_core.py  test_make.py  test_registry.py
tests/envs/: __init__.py  test_pong.py
