[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-arena"
version = "0.1.0"
description = "A Python library for competitive reinforcement learning environments"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RL Arena Contributors", email = "contact@rl-arena.dev"}
]
keywords = ["reinforcement-learning", "multi-agent", "competition", "rl", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "gymnasium>=0.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=0.990",
    "flake8>=5.0.0",
]
examples = [
    "stable-baselines3>=2.0.0",
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/rl-arena/rl-arena-env"
Documentation = "https://github.com/rl-arena/rl-arena-env/tree/main/docs"
Repository = "https://github.com/rl-arena/rl-arena-env"
"Bug Tracker" = "https://github.com/rl-arena/rl-arena-env/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
